--- a/main.html
+++ b/main.html
@@ -5,151 +5,183 @@
   <title>Cell Defense - 메인 메뉴</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-    @keyframes bgMove {
-      0%   { background-position: 0 0, 0 0; }
-      50%  { background-position: 200px 200px, -200px -200px; }
-      100% { background-position: 0 0, 0 0; }
-    }
+
     body {
-      margin: 0; padding: 0;
+      margin: 0;
+      padding: 0;
       min-height: 100vh;
       font-family: 'Press Start 2P', monospace;
       color: #e0f7ea;
-      background-color: #1a1a1a;
-      background-image:
-        radial-gradient(circle at 20% 20%, rgba(58,100,58,0.2) 2px, transparent 2px),
-        radial-gradient(circle at 80% 80%, rgba(58,100,58,0.2) 2px, transparent 2px);
-      background-size: 40px 40px, 40px 40px;
-      animation: bgMove 30s infinite linear;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      background: radial-gradient(circle at center, #102010, #000);
+      overflow: hidden;
+      animation: bgAnim 30s infinite alternate;
     }
+
+    @keyframes bgAnim {
+      0%   { background-position: 0 0; }
+      50%  { background-position: 100px 200px; }
+      100% { background-position: 0 0; }
+    }
+
     .container {
-      width: 700px;
-      padding: 40px 30px;
-      background: rgba(0, 0, 0, 0.7);
+      width: 720px;
+      padding: 40px;
+      background: rgba(0, 0, 0, 0.75);
       border: 4px solid #3a6;
-      box-shadow:
-        inset 0 0 8px #030,
-        0 0 12px rgba(58,100,58,0.6);
+      box-shadow: 0 0 20px #3a6;
       text-align: center;
+      margin: auto;
+      margin-top: 60px;
+      position: relative;
+      z-index: 2;
     }
+
     .logo img {
-      width: 100px; height: 100px;
+      width: 140px; height: 140px;
       image-rendering: pixelated;
       border: 3px solid #3a6;
-      box-shadow: 0 0 8px rgba(58,100,58,0.7);
+      box-shadow: 0 0 16px #3a6;
+      animation: pulseGlow 2.5s infinite;
       margin-bottom: 16px;
     }
+
+    @keyframes pulseGlow {
+      0% { box-shadow: 0 0 6px #3a6; }
+      50% { box-shadow: 0 0 20px #80ffb3; }
+      100% { box-shadow: 0 0 6px #3a6; }
+    }
+
     h1 {
       margin: 0 0 8px;
-      font-size: 42px;
+      font-size: 40px;
       color: #80ffb3;
-      text-shadow:
-        1px 1px 2px #030,
-        0 0 4px rgba(58,100,58,0.6);
+      text-shadow: 0 0 6px #030, 0 0 12px #3a6;
     }
+
     .subtitle {
       font-size: 14px;
       color: #a0e8c0;
-      margin-bottom: 32px;
+      margin-bottom: 24px;
     }
+
+    .intro {
+      font-size: 12px;
+      margin-bottom: 30px;
+      color: #b4ffd4;
+      line-height: 1.8;
+    }
+
     .menu {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 20px;
-      margin-bottom: 24px;
+      margin-bottom: 28px;
     }
+
     .menu button {
-      padding: 14px 0;
-      font-size: 16px;
+      padding: 16px 0;
+      font-size: 14px;
       background: #0f0f0f;
       color: #b4ffd4;
       border: 2px solid #3a6;
       cursor: pointer;
-      transition: background-color 0.2s, box-shadow 0.2s;
+      transition: all 0.3s ease;
       image-rendering: pixelated;
+      box-shadow: 0 0 4px #3a6;
     }
+
     .menu button:hover {
       background-color: #112;
-      box-shadow: 0 0 6px rgba(58,100,58,0.8);
+      transform: scale(1.08);
+      box-shadow: 0 0 12px #80ffb3;
     }
+
     .menu button span {
       display: inline-block;
       vertical-align: middle;
     }
-    label.map-label {
-      display: block;
-      margin-top: 16px;
-      font-size: 14px;
-      color: #b4ffd4;
-    }
-    #mapSelect {
-      font-family: 'Press Start 2P', monospace;
-      color: #000;
-      padding: 4px;
-      border: 2px solid #3a6;
-      margin-left: 8px;
+
+    audio {
+      display: none;
     }
 
-    .input-group {
-      margin-top: 20px;
-      font-size: 12px;
-      color: #b4ffd4;
-      text-align: left;
-    }
-    .input-group label {
-      display: block;
-      margin-bottom: 8px;
-    }
-    .input-group input {
-      font-family: 'Press Start 2P', monospace;
-      padding: 4px;
-      margin-left: 8px;
-      border: 2px solid #3a6;
-      background: #111;
-      color: #b4ffd4;
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 0;
+      width: 100vw;
+      height: 100vh;
     }
   </style>
 </head>
 <body>
+  <!-- 배경 애니메이션 캔버스 -->
+  <canvas id="bgCanvas"></canvas>
+
   <div class="container">
     <div class="logo">
       <img src="images/Unrevr.png" alt="UNREVR 로고">
     </div>
     <h1>Cell Defense</h1>
-    <div class="subtitle">실험실에서 세포를 지휘하세요</div>
+    <div class="subtitle">세포 진화 생존 디펜스 게임</div>
+    <div class="intro">
+      침입하는 바이러스 무리로부터 <br>
+      세포를 지휘하고, 마지막 희망이 되어보세요.
+    </div>
 
     <div class="menu">
       <button onclick="location.href='index.html'"><span>▶ 게임 시작</span></button>
       <button onclick="location.href='roles.html'"><span>📖 역할 소개</span></button>
+      <button onclick="location.href='dex.html'"><span>📅 연구 노트</span></button>
+      <button onclick="location.href='settings.html'"><span>⚙️ 설정</span></button>
     </div>
+  </div>
+
+  <!-- 브금 -->
+<audio id="bgm" preload="auto" loop>
+  <source src="sounds/menu_bgm.mp3" type="audio/mpeg">
+</audio>
 
 
+
+  <!-- 바이러스 배경 효과 -->
   <script>
-    const mapSelect = document.getElementById('mapSelect');
-    mapSelect.onchange = () => {
-      localStorage.setItem('selectedMap', mapSelect.value);
-    };
-    const prevMap = localStorage.getItem('selectedMap');
-    if (prevMap) mapSelect.value = prevMap;
+    const canvas = document.getElementById("bgCanvas");
+    const ctx = canvas.getContext("2d");
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
 
-    const startBtn = document.getElementById('startBtn');
-    startBtn.onclick = () => {
-      const username = document.getElementById('usernameInput').value.trim();
-      const realname = document.getElementById('realnameInput').value.trim();
+    const particles = [];
+    for (let i = 0; i < 60; i++) {
+      particles.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        r: Math.random() * 2 + 1,
+        dx: Math.random() * 0.8 - 0.4,
+        dy: Math.random() * 0.8 - 0.4,
+      });
+    }
 
-      if (!username || !realname) {
-        alert('사용자 이름과 본명을 모두 입력하세요.');
-        return;
+    function drawParticles() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "rgba(58, 160, 120, 0.3)";
+      for (let p of particles) {
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2);
+        ctx.fill();
+        p.x += p.dx;
+        p.y += p.dy;
+
+        if (p.x < 0 || p.x > canvas.width) p.dx *= -1;
+        if (p.y < 0 || p.y > canvas.height) p.dy *= -1;
       }
+      requestAnimationFrame(drawParticles);
+    }
 
-      localStorage.setItem('gdh_username', username);
-      localStorage.setItem('gdh_realname', realname);
+    drawParticles();
 
-      location.href = 'index.html';
-    };
+    
   </script>
 </body>
 </html>
