--- a/roles.html
+++ b/roles.html
@@ -170,12 +170,12 @@
   <div class="report" id="report" data-page="1"></div>
   <button class="nav-btn nav-left" onclick="prevPage()">◀</button>
   <button class="nav-btn nav-right" onclick="nextPage()">▶</button>
-  <button class="back-btn" onclick="location.href='main.html'">메인 화면으로</button>
+  <button class="back-btn" onclick="location.href='index.html'">메인 화면으로</button>
 
   <script>
     const pages = [
       {
-        img: 'images/cell.png',
+        img: 'images/Cell.png',
         title: '기본 세포 (CELL-α)',
         func: '단일 바이러스 집중 포격. 고속 연사형 방어 세포.',
         bio: '핵, 미토콘드리아, 소포체, 리보솜, 리소좀, 골지체로 구성되어 있으며, 면역 초기 반응의 중심.',
@@ -199,7 +199,7 @@
         result: '지속시간 6.1s / 이동속도 감소율 48%'
       },
       {
-        img: 'images/cellevo.png',
+        img: 'images/Cellevo.png',
         title: '백혈구 (CELL-Ω)',
         func: '공격 속도 강화, 투사체에 둔화 효과 부여.',
         bio: '변형된 핵과 고활성 리소좀, 빠른 ATP 소비 능력을 지님. 적을 일정 확률로 둔화시키는 면역계 특화 세포.',
