--- a/dex.html
+++ b/dex.html
@@ -127,7 +127,7 @@
     </div>
 
     <div class="back-button-container">
-      <button onclick="location.href='main.html'">← 메인 메뉴로</button>
+      <button onclick="location.href='index.html'">← 메인 메뉴로</button>
     </div>
   </div>
 <style>
