--- a/main.html
+++ b/main.html
@@ -399,7 +399,7 @@ const scoreDisplay = document.getElementById('score');
 
 // 이미지 로드
 const imgCell = new Image();
-imgCell.src = 'images/cell.png';
+imgCell.src = 'images/Cell.png';
 const imgPlant = new Image();
 imgPlant.src = 'images/plant.png';
 const imgNeuron = new Image();
