--- a/main.html
+++ b/main.html
@@ -36,6 +36,7 @@
       display: flex;
       justify-content: center;
       padding-top: 20px;
+      overflow: hidden;
     }
 
     .container {
@@ -170,7 +171,7 @@
     #cellInfo {
       position: absolute;
       top: 8px;
-      left: calc(50% + 600px);
+      left: calc(50% + 550px);
       width: 300px;
       padding: 8px;
       background: rgba(17,17,17,0.9);
