--- a/main.html
+++ b/main.html
@@ -471,7 +471,7 @@ const enemyDescriptions = {
 // 선택된 업그레이드 대상, 셀 배치 중, 적 클릭용
 let selectedEnemy = null;
 
-let ATP = 5000;
+let ATP = 500;
 let health = 5;
 let wave = 0;
 let enemiesToSpawn = 0;
@@ -1018,7 +1018,24 @@ imgPlantEvo.src = 'images/plantevo.png';
 const imgNeuronEvo = new Image();
 imgNeuronEvo.src = 'images/newevo.png';
 
+let isInvincible = false;
+let invincibleTimer = 0;
+
 function loop() {
+  // 무적 상태 관리 및 시각 효과
+  if (isInvincible) {
+    invincibleTimer--;
+    if (invincibleTimer <= 0) {
+      isInvincible = false;
+    }
+    // 무적 시 캔버스 테두리 깜빡임 효과
+    ctx.save();
+    ctx.strokeStyle = invincibleTimer % 30 < 15 ? '#ff0' : '#fff';
+    ctx.lineWidth = 10;
+    ctx.strokeRect(0, 0, canvas.width, canvas.height);
+    ctx.restore();
+  }
+
   // disappearEffect 처리 및 세포 제거 (이펙트 끝난 세포만)
   for (let i = cells.length - 1; i >= 0; i--) {
     const cell = cells[i];
@@ -1337,7 +1354,7 @@ for(let i=projectiles.length-1;i>=0;i--){
     projectiles.splice(i,1);
   } else {
     p.x+=(dx/d)*p.speed; p.y+=(dy/d)*p.speed;
-    ctx.fillStyle = p.isWhiteBlood ? '#fff' : 'white';
+    ctx.fillStyle = p.isWhiteBlood ? '#ff0000' : '#fff';
     ctx.beginPath(); ctx.arc(p.x,p.y,5,0,Math.PI*2); ctx.fill();
   }
 }
@@ -1381,9 +1398,11 @@ for(let i=projectiles.length-1;i>=0;i--){
     }
     if (e.x > 800 && e.hp > 0) {
       console.log('살아있는 적군이 끝 도달', e);
-      const dmg = e.damageToCell * (e.hp / e.maxHp);
-      health = Math.max(0, health - dmg);
-      healthDisplay.textContent = health.toFixed(2);
+      if (!isInvincible) {
+        const dmg = e.damageToCell * (e.hp / e.maxHp);
+        health = Math.max(0, health - dmg);
+        healthDisplay.textContent = health.toFixed(2);
+      }
       enemies.splice(i, 1);
       if (health <= 0) {
         if (reviveCount < 2) {
@@ -1472,6 +1491,9 @@ for(let i=projectiles.length-1;i>=0;i--){
             health = 5;
             healthDisplay.textContent = health.toFixed(2);
             showWaveBanner('생명력이 회복되었습니다!');
+            // 무적 상태 3초
+            isInvincible = true;
+            invincibleTimer = 180; // 60fps 기준 3초
             loopId = requestAnimationFrame(loop);
           };
           return;
